BP-119 feat: DisasterMap 구현